--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+/database/migrations/2014_10_12_000000_create_users_table.php
+/database/migrations/2014_10_12_100000_create_password_reset_tokens_table.php
+/database/migrations/2019_08_19_000000_create_failed_jobs_table.php
+/database/migrations/2019_12_14_000001_create_personal_access_tokens_table.php
+
